* Fixed unnecessary overflow hidden issue

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/pedagogy.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/pedagogy.scss
@@ -4,7 +4,6 @@
 @import "../base/breakpoints";
 
 .pedagogy-form {
-  overflow: hidden;
   position: relative;
 }
 
